# fl-fserver

./: .editorconfig  .gitignore  README.md  docker-compose.yaml  instance  loki-config.yaml  promtail-config.yaml  up.sh
.github/workflows/: build.yaml
fsdownload/: .dockerignore  .gitignore  Dockerfile  httpserver.py  requirement.txt  run.py
fsdownload/core/: __init__.py
fsdownload/core/modules/: controllers.py  data.py  job.py
fsdownload/core/static/css/: styles.css
fsdownload/core/templates/: change_password.html  edit_page.html  error.html  header.html  index.html  login.html
scripts/: deploy.sh
staff/migration/: 2024-09-24-add-expired-at.up.sql
staff/systemd/: fsdownload.service  websocket.service
websocketrust/: .dockerignore  Cargo.toml  Dockerfile  protocol-analysis.md
websocketrust/src/: main.rs
