[package]
name = "websocket_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
uuid = { version = "1.8", features = ["v4"] }
log = "0.4"
env_logger = "0.11.3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = 'abort'
